--- a/style.css
+++ b/style.css
@@ -1,18 +1,35 @@
 body {
-    font-family:'Courier New', Courier, monospace;
-    background:black;
-    color:white;
-    font-size:1.2em;
-    text-align:center;
+    font-family: 'Courier New', Courier, monospace;
+    background: black;
+    color: white;
+    font-size: 1.2em;
+    text-align: center;
 }
+
 #page {
-    text-align:left;
-    width:800px;
-    display:inline-block;
+    text-align: left;
+    width: 800px;
+    display: inline-block;
 }
+
 a {
-    color:white;
+    color: white;
 }
+
 ul {
-    list-style-type:circle;
+    list-style-type: circle;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
